MISUV-2078 Fix dynamic payment messages and what you owe table vertical alignments

--- a/public/stylesheets/itvc.css
+++ b/public/stylesheets/itvc.css
@@ -1018,6 +1018,7 @@ html[data-useragent*='MSIE 10.0'] .flex-container {
     }
     .govuk-table-whatYouOwe td:first-of-type {
         width: 170px;
+        vertical-align: top;
     }
     .govuk-table-whatYouOwe td:nth-of-type(2) {
         width: 550px;
@@ -1025,6 +1026,7 @@ html[data-useragent*='MSIE 10.0'] .flex-container {
     .govuk-table-whatYouOwe td:nth-of-type(3) {
         width: 150px;
         text-align: right;
+        vertical-align: top;
     }
 
     .govuk-table-paymentsTab td:nth-of-type(1) {
